src/objects/CMC_Presales_LOE__c.object
<CustomObject>
    <fields>
        <fullName>E2_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Executive</inlineHelpText>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presales_LOEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2_Date_Scoped__c</fullName>
        <description>Date Scoped</description>
        <inlineHelpText>Date Scoped</inlineHelpText>
        <label>Date Scoped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E2_Derived_Effort_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the Derived effort group whose derived efforts templates are used in the estimate.</description>
        <inlineHelpText>Points to the Derived effort group whose derived efforts templates are used in the estimate.</inlineHelpText>
        <label>Derived Effort Template</label>
        <referenceTo>E2_Derived_Effort_Group__c</referenceTo>
        <relationshipLabel>Presales LOEs</relationshipLabel>
        <relationshipName>Presales_LOEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2_Is_Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Primary Estimate out of other estimates.</description>
        <inlineHelpText>Is this estimate a primary estimate</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2_Last_Build_Datetime__c</fullName>
        <label>Last Build Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>E2_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reviewer</description>
        <inlineHelpText>Reviewer</inlineHelpText>
        <label>Delivery Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presales_LOEs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2_Risk__c</fullName>
        <label>Risk %</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E2_Risk_percentage__c</fullName>
        <description>The Risk percentage added on the total capacity .</description>
        <inlineHelpText>The Risk percentage added on the total capacity .</inlineHelpText>
        <label>Risk percentage</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2_SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solution Architect</description>
        <inlineHelpText>Solution Architect</inlineHelpText>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presales_LOEs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E2_Total_Architect_Hrs__c</fullName>
        <label>Total Architect Hrs</label>
        <summarizedField>E2_Capacity__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>E2_Capacity__c.Phase__c</field>
            <operation>equals</operation>
            <value>Architect</value>
        </summaryFilterItems>
        <summaryForeignKey>E2_Capacity__c.Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E2_Total_Build_Hrs__c</fullName>
        <label>Total Build Hrs</label>
        <summarizedField>E2_Capacity__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>E2_Capacity__c.Phase__c</field>
            <operation>equals</operation>
            <value>Build</value>
        </summaryFilterItems>
        <summaryForeignKey>E2_Capacity__c.Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E2_Total_Deploy_Thrive_Hrs__c</fullName>
        <label>Total Deploy &amp; Thrive Hrs</label>
        <summarizedField>E2_Capacity__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>E2_Capacity__c.Phase__c</field>
            <operation>equals</operation>
            <value>Deploy &amp; Thrive</value>
        </summaryFilterItems>
        <summaryForeignKey>E2_Capacity__c.Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E2_Total_Hrs__c</fullName>
        <formula>E2_Total_Architect_Hrs__c +  E2_Total_Build_Hrs__c  +  E2_Total_Plan_Hrs__c +  E2_Total_Test_Hrs__c +  E2_Total_Deploy_Thrive_Hrs__c +  E2_Total_Strategy_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E2 Total Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E2_Total_Plan_Hrs__c</fullName>
        <label>Total Plan Hrs</label>
        <summarizedField>E2_Capacity__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>E2_Capacity__c.Phase__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </summaryFilterItems>
        <summaryForeignKey>E2_Capacity__c.Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E2_Total_Strategy_Hrs__c</fullName>
        <label>Total Strategy Hrs</label>
        <summarizedField>E2_Capacity__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>E2_Capacity__c.Phase__c</field>
            <operation>equals</operation>
            <value>Strategy</value>
        </summaryFilterItems>
        <summaryForeignKey>E2_Capacity__c.Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E2_Total_Test_Hrs__c</fullName>
        <description>Sum up all test phase hrs from capacity</description>
        <inlineHelpText>Sum up all test phase hrs from capacity</inlineHelpText>
        <label>Total Test Hrs</label>
        <summarizedField>E2_Capacity__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>E2_Capacity__c.Phase__c</field>
            <operation>equals</operation>
            <value>Test</value>
        </summaryFilterItems>
        <summaryForeignKey>E2_Capacity__c.Estimator__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>E2_Version_Notes__c</fullName>
        <description>Version notes</description>
        <inlineHelpText>Version notes</inlineHelpText>
        <label>Version Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>